Bug 140272 - impress crashes while dragging a slide in slide preview
Summary: impress crashes while dragging a slide in slide preview
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.2.2.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-08 18:05 UTC by fadil.fikrillah
Modified: 2022-05-02 07:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
sure (22.70 MB, video/mp4)
2021-02-09 11:16 UTC, fadil.fikrillah
Details
on previous attachment, i crashed impress with touchscreen, which is 100% reproducible. here i crashed it with my cursor, that sometimes need several attempts (1.63 MB, video/webm)
2021-02-09 12:42 UTC, fadil.fikrillah
Details

Note You need to log in before you can comment on or make changes to this bug.
Description fadil.fikrillah 2021-02-08 18:05:07 UTC
Bug description:
impress crashes while dragging a slide in slide preview with touchscreen


Steps to produce the bug:
1. drag a slide on slide preview
2. if the bug does not appear, try it again until it does (just randomly drag random slide, won't take a 10s)

Current behavior:
impress window disappear (crashes)

Expected behavior:
impress does not crash, the slide goes to where it's supposed to be

Notes:
the bug 100% reproducible with touchscreen. probably has something to do with it, i can't reproduce the bug if i haven't touch the screen since i logged in the computer

Operating system: Fedora 33
LibreOffice version: 7.0.4.2 from The Fedora Project; 7.1.0.3 (flatpak, id:f6099ecf3d29644b5008cc8f48f42f4a40986e4c)
Environment: CPU thread: 4; OS: linux 5.10
Locale: id.ID (id_ID.UTF-8); UI:id-ID
Comment 1 Xisco Faulí 2021-02-09 10:22:51 UTC
Thanks for reporting this issue.
Could you please attach a screencast showing the problem ?
Comment 2 fadil.fikrillah 2021-02-09 11:16:22 UTC
Created attachment 169613 [details]
sure
Comment 3 fadil.fikrillah 2021-02-09 12:42:00 UTC
Created attachment 169618 [details]
on previous attachment, i crashed impress with touchscreen, which is 100% reproducible. here i crashed it with my cursor, that sometimes need several attempts
Comment 4 QA Administrators 2021-02-10 04:12:48 UTC Comment hidden (obsolete)
Comment 5 Xisco Faulí 2021-07-07 11:07:31 UTC
Hello,
Could you please try to reproduce it with the latest version of LibreOffice
from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the bug is still present in the latest version.
Comment 6 doomsdayrs 2021-10-25 17:54:54 UTC
Greetings, I have replicated this bug on my touchscreen laptop running fedora 35 with the flatpak version of Libreoffice (7.2.2.2) from flathub and the normal 

Information:
	Version: 7.2.2.2 / LibreOffice Community
	Build ID: 02b2acce88a210515b4a5bb2e46cbfb63fe97d56
	CPU threads: 8; OS: Linux 5.14; UI render: default; VCL: gtk3
	Locale: en-US (en_US.UTF-8); UI: en-US
	Flatpak
	Calc: threaded

	OS: Fedora 35 on Wayland

To reproduce:
	1. Open Libre Impress
	2. Do not style
	3. Begin by pressing down on a slide in the slide list.
	4. Drag finger to any location out of the slide item
	5. Experience a crash
Comment 7 Commit Notification 2022-04-26 15:17:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5b27a93f58671b7546414cfff673179c3ff0550f

tdf#140272 gtk3: fix crash with dnd using touch

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2022-04-26 15:17:22 UTC
fixed in trunk, backport to 7-3 in gerrit
Comment 9 Commit Notification 2022-05-02 07:04:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/8bf70e7af7ae596edf7610cdfc8a728801dd259a

tdf#140272 gtk3: fix crash with dnd using touch

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.