tdf#140272 gtk3: fix crash with dnd using touch

gdk_wayland_drag_context_manage_dnd needs
gdk_device_window_at_position(device, ...)
to succeed

similar to the problem of https://gitlab.gnome.org/GNOME/gtk/-/issues/1080

Change-Id: I2e1956b40a622b1d74d3aef3b5fac654fc1256eb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133409
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>